rusty-cdk-macros/tests/fails/delay_seconds_boundary_high.rs
use rusty_cdk_macros::delay_seconds;

fn example() {
    let delay = delay_seconds!(901);
}

fn main() {}