rusty-cdk-macros/tests/fails/delay_seconds_boundary_high.stderr
error: value should be at most 900
 --> tests/fails/delay_seconds_boundary_high.rs:4:32
  |
4 |     let delay = delay_seconds!(901);
  |                                ^^^
